src/objects/loan__Loan_Status_History__c.object
<CustomObject>
    <description>Loan Status History</description>
    <fields>
        <fullName>loan__Loan_Account__c</fullName>
        <description>Loan Account</description>
        <inlineHelpText>Loan Account</inlineHelpText>
        <label>Loan Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Loan Status History</relationshipLabel>
        <relationshipName>Loan_Status_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__New_Status__c</fullName>
        <label>New Status</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Old_Status__c</fullName>
        <description>Old Status</description>
        <inlineHelpText>Old Status</inlineHelpText>
        <label>Old Status</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Loan Status History</label>
    <nameField>
        <displayFormat>LSHI-{000000000}</displayFormat>
        <label>Loan Status History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Status History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>